--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11144,6 +11144,15 @@ body {
   color: #2c7aff;
 }
 
+.navbar .dropdown .dropdown-toggle::after {
+  content: none;
+}
+
+.navbar .dropdown .dropdown-menu {
+  left: auto;
+  right: 0;
+}
+
 .navbar .user-navs .avatar {
   height: 40px;
   width: 40px;
@@ -11159,16 +11168,130 @@ body {
   background-size: cover;
   background-position: center center;
   flex-shrink: 0;
+  margin-right: 0.5rem;
 }
 
 .post-item .content {
   width: 100%;
   padding: 0 0.5rem;
   min-height: 180px;
+  text-align: justify;
 }
 
 .post-item .content .excerpt {
   text-align: justify;
   height: 100px;
+}
+
+.post-item .content .post-info {
+  padding: 0;
+  margin: 0;
+}
+
+.post-item .content .post-info li {
+  list-style: none;
+  display: inline-block;
+  padding: 0 0.5rem;
+}
+
+.post-item .content .post-info li i {
+  margin-right: 0.25rem;
+}
+
+.post-item .content .avatar {
+  height: 40px;
+  width: 40px;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 50%;
+  margin-right: 0.75rem;
+}
+
+.site-badge {
+  position: relative;
+  font-size: 12px;
+  line-height: 1;
+  font-weight: bold;
+  padding: 0.5rem;
+  color: #fff;
+  display: inline-block;
+  border-radius: 5px 0 0 5px;
+  z-index: 1;
+}
+
+.site-badge::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  right: -24px;
+  top: 0;
+  border-right-color: transparent !important;
+  z-index: -1;
+}
+
+.site-badge.orange {
+  background-color: #FA6400;
+}
+
+.site-badge.orange::before {
+  border: solid 14px #FA6400;
+}
+
+.login-wrapper .sub-title {
+  font-weight: 500;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.85);
+  font-style: italic;
+}
+
+.login-wrapper .other-options {
+  padding-top: 1.5rem;
+  text-align: center;
+}
+
+.login-wrapper .other-options .text {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border: solid 1px #ededee;
+  background-color: #fff;
+  border-radius: 50%;
+  position: relative;
+  top: -25px;
+}
+
+.login-form .form-control {
+  border-radius: 0;
+}
+
+.login-form .form-control:focus {
+  box-shadow: none;
+}
+
+.google {
+  background-color: #de5246;
+  border-color: #de5246;
+}
+
+.google:hover,
+.google:active {
+  background-color: #de5246;
+  border-color: #de5246;
+  box-shadow: none;
+}
+
+.facebook {
+  background-color: #3b5998;
+  border-color: #3b5998;
+}
+
+.facebook:hover,
+.facebook:active {
+  background-color: #3b5998;
+  border-color: #3b5998;
+  box-shadow: none;
 }
 
