--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6255,8 +6255,8 @@ a.close.disabled {
   transition: -webkit-transform 0.3s ease-out;
   transition: transform 0.3s ease-out;
   transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
-  -webkit-transform: translate(0, -50px);
-          transform: translate(0, -50px);
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -11162,6 +11162,15 @@ body {
   margin: 0 0.5rem;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
+.post-item .site-badge {
+  position: absolute;
+  left: 0;
+}
+
 .post-item .featured-image {
   width: 250px;
   border-radius: 8px;
@@ -11207,6 +11216,30 @@ body {
   margin-right: 0.75rem;
 }
 
+.post-details .post-info {
+  padding: 0;
+  margin: 0;
+}
+
+.post-details .post-info li {
+  list-style: none;
+  display: inline-block;
+  padding: 0 0.5rem;
+}
+
+.post-details .post-info li i {
+  margin-right: 0.25rem;
+}
+
+.post-details .avatar {
+  height: 40px;
+  width: 40px;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 50%;
+  margin-right: 0.75rem;
+}
+
 .site-badge {
   position: relative;
   font-size: 12px;
@@ -11236,6 +11269,22 @@ body {
 
 .site-badge.orange::before {
   border: solid 14px #FA6400;
+}
+
+.site-badge.blue {
+  background-color: #2c7aff;
+}
+
+.site-badge.blue::before {
+  border: solid 14px #2c7aff;
+}
+
+.site-badge.gray {
+  background-color: #696969;
+}
+
+.site-badge.gray::before {
+  border: solid 14px #696969;
 }
 
 .login-wrapper .sub-title {
@@ -11293,5 +11342,56 @@ body {
   background-color: #3b5998;
   border-color: #3b5998;
   box-shadow: none;
+}
+
+.new-post .title {
+  font-size: 24px;
+  font-weight: bold;
+  padding: 0;
+  margin-bottom: 1rem;
+  width: 100%;
+  border: none;
+  box-shadow: none;
+}
+
+.new-post .title:focus {
+  box-shadow: none;
+  outline: none;
+}
+
+.new-post .subject,
+.new-post .body-content {
+  padding: 0;
+  margin-bottom: 1rem;
+  width: 100%;
+  border: none;
+  box-shadow: none;
+  color: #808080;
+  resize: none;
+}
+
+.new-post .subject:focus,
+.new-post .body-content:focus {
+  box-shadow: none;
+  outline: none;
+}
+
+.new-post .featured-image-upload {
+  color: #d6d6d6;
+  border-radius: 8px;
+  border: dashed 1px #9BA1B6;
+  background-color: #F8F7FF;
+  padding: 5rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.new-post .featured-image-upload .icon {
+  font-size: 80px;
+}
+
+.new-post .featured-image-upload .text {
+  font-size: 24px;
+  font-weight: bold;
 }
 
