--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -265,6 +265,8 @@ body {
         padding: 5rem;
         text-align: center;
         margin-bottom: 1rem;
+        background-size: cover;
+        background-position: center center;
         .icon {
             font-size: 80px;
         }
