--- a/resources/sass/bootstrap/_reboot.scss
+++ b/resources/sass/bootstrap/_reboot.scss
@@ -291,6 +291,8 @@ label {
   // Allow labels to use `margin` for spacing.
   display: inline-block;
   margin-bottom: $label-margin-bottom;
+  color: #333333;
+  font-weight: 400;
 }
 
 // Remove the default `border-radius` that macOS Chrome adds.
