--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,16 @@ body {
     background-color: #e6e5f4;
 }
 
+.site-wrppaer {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    .site-content {
+        height: 100%;
+        overflow: auto;
+    }
+}
+
 .select2-container {
     width: 100% !important;
     border-radius: 8px;
