--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,22 @@ body {
     background-color: #e6e5f4;
 }
 
+.page-not-found {
+    display: flex;
+    // flex-direction: column;
+    align-items: center;
+    .content {
+        margin-left: 1rem;
+        padding-left: 1rem;
+        // border-left: solid 5px #007bff;
+        opacity: .5;
+
+        h1 {
+            font-size: 100px;
+        }
+    }
+}
+
 .site-wrppaer {
     display: flex;
     flex-direction: column;
