--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11401,6 +11401,14 @@ body {
   border: solid 14px #696969;
 }
 
+.site-badge.danger {
+  background-color: #dc3545;
+}
+
+.site-badge.danger::before {
+  border: solid 14px #dc3545;
+}
+
 .login-wrapper label.error,
 .register-wrapper label.error {
   position: absolute;
