--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -242,6 +242,12 @@ body {
             border: solid 14px #696969;
         }
     }
+    &.danger {
+        background-color: #dc3545;
+        &::before {
+            border: solid 14px #dc3545;
+        }
+    }
 }
 
 .login-wrapper, .register-wrapper {
