--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11128,7 +11128,7 @@ a.text-dark:focus {
   border-radius: 0;
   border: none;
   color: inherit;
-  font-weight: bold;
+  font-weight: 500;
   text-align: center;
   border-bottom: solid 4px transparent;
   -webkit-transition: all 0.5s ease;
