--- a/resources/sass/profile.scss
+++ b/resources/sass/profile.scss
@@ -17,7 +17,7 @@ $primary: #2c7aff;
             border-radius: 0;
             border: none;
             color: inherit;
-            font-weight: bold;
+            font-weight: 500;
             text-align: center;
             border-bottom: solid 4px transparent;
             transition: all .5s ease;
